// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CriteriaSidebarSearchBar should render 1`] = `
<DocumentFragment>
  <div
    class="input-group"
  >
    <div
      class="input-group-item"
    >
      <input
        class="form-control input-group-inset input-group-inset-after"
        data-testid="search-input"
        placeholder="search"
        type="text"
        value=""
      />
      <div
        class="input-group-inset-item input-group-inset-item-after"
      >
        <button
          class="btn btn-unstyled"
          data-testid="search-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lexicon-icon lexicon-icon-search icon"
            viewBox="0 0 512 512"
          >
            <use
              xlink:href="#search"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CriteriaSidebarSearchBar should render a button with a times icon when an input is entered 1`] = `
<button
  class="btn btn-unstyled"
  data-testid="search-button"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lexicon-icon lexicon-icon-times icon"
    viewBox="0 0 512 512"
  >
    <use
      xlink:href="#times"
    />
  </svg>
</button>
`;
